--- a/frontend/css/main-style.css
+++ b/frontend/css/main-style.css
@@ -108,7 +108,7 @@ body {
 
 .menu-log-out {
     font-size: 24px;
-    font-weight: 500;
+    font-weight: 700;
     color: white;
     text-shadow: 0px 3px 5px rgba(0, 0, 0, 0.3);
     padding: 30px 20px;
@@ -314,6 +314,8 @@ hr {
 }
 
 #add-to-vault{
+    font-family: "Poppins";
+    font-weight: 700;
     background-color: white;
     color: black;
     width: 250px;
@@ -322,6 +324,8 @@ hr {
 }
 
 #restore-settings{
+    font-family: "Poppins";
+    font-weight: 700;
     margin-top: 20px;
     background-color: white;
     color: black;
