Bug Fixes, Visual Tweaks, More Descriptive Modals

--- a/frontend/css/forgot-reset-password-style.css
+++ b/frontend/css/forgot-reset-password-style.css
@@ -1,5 +1,14 @@
 @import url('common.css');
 
+@keyframes transitionIn{
+    from{
+        opacity: 0.25;
+    }
+    to{
+        opacity: 1;
+    }
+}
+
 body {
     font-family: "Poppins";
 }
@@ -30,6 +39,7 @@ nav img {
 }
 
 .split-right {
+    animation: transitionIn 2s;
     top: 60px;
     height: calc(100vh - 60px);
 }
