--- a/frontend/css/login-style.css
+++ b/frontend/css/login-style.css
@@ -1,5 +1,14 @@
 @import url('common.css');
 
+@keyframes transitionIn{
+    from {
+        opacity: 0.25;
+    }
+    to{
+        opacity: 1;
+    }
+}
+
 nav {
   position: fixed;
   top: 0;
@@ -57,6 +66,7 @@ nav {
 }
 
 .split-right {
+  animation: transitionIn 2s;
   height: 100vh;
   width: 60%;
   position: fixed;
