--- a/frontend/css/signup-style.css
+++ b/frontend/css/signup-style.css
@@ -1,5 +1,14 @@
 @import url('common.css');
 
+@keyframes transitionIn{
+  from{
+    opacity: 0.25;
+  }
+  to{
+    opacity: 1;
+  }
+}
+
 .container {
   width: 100%;
 }
@@ -43,6 +52,7 @@
 }
 
 .split-right {
+  animation: transitionIn 2s;
   height: 100vh;
   width: 60%;
   position: fixed;
