--- a/frontend/css/signup-style.css
+++ b/frontend/css/signup-style.css
@@ -199,20 +199,43 @@ input {
     text-decoration: none;
 }
 
-/* Responsive adjustments */
-@media screen and (max-width: 768px) {
-  .sign-up-container {
-    padding: 30px 20px;
-  }
+/* Desktop Responsiveness */
+@media (min-width: 1200px) {
+    .split-left {
+        width: 35%;
+    }
+    
+    .split-right {
+        width: 65%;
+    }
+    
+    .sign-up-container {
+        max-width: 800px;
+        padding: 50px;
+    }
+    
+    .dynamic-signup-modal-content {
+        width: 25%;
+        min-width: 400px;
+    }
 }
 
-@media screen and (max-width: 480px) {
-  .sign-up-container {
-    padding: 25px 15px;
-  }
-  
-  .sign-up-container a {
-    padding-top: 15px;
-    font-size: 14px;
-  }
+@media (min-width: 1600px) {
+    .split-left {
+        width: 30%;
+    }
+    
+    .split-right {
+        width: 70%;
+    }
+    
+    .sign-up-container {
+        max-width: 900px;
+        padding: 60px;
+    }
+    
+    .dynamic-signup-modal-content {
+        width: 20%;
+        min-width: 450px;
+    }
 }
